[ADD] Agregar modulos

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,11 @@
 	path = l10n_gt_extra
 	url = git@github.com:rocketgithub/l10n_gt_extra.git
 	branch = 13.0
+[submodule "fel_gt"]
+	path = fel_gt
+	url = git@github.com:rocketgithub/fel_gt.git
+	branch = 15.0
+[submodule "fel_megaprint"]
+	path = fel_megaprint
+	url = git@github.com:rocketgithub/fel_megaprint.git
+	branch = 15.0
