[ADD] Agregar modulos

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 	path = fel_megaprint
 	url = git@github.com:rocketgithub/fel_megaprint.git
 	branch = 13.0
+[submodule "hr_expense_invoice"]
+	path = hr_expense_invoice
+	url = git@github.com:rocketgithub/hr_expense_invoice.git
