[ADD] Agregar modulos

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,14 @@
 	path = fel_megaprint
 	url = git@github.com:rocketgithub/fel_megaprint.git
 	branch = 15.0
+[submodule "hr_expense_invoice"]
+	path = hr_expense_invoice
+	url = git@github.com:rocketgithub/hr_expense_invoice.git
+[submodule "pos_gt"]
+	path = pos_gt
+	url = git@github.com:rocketgithub/pos_gt.git
+	branch = 15.0
+[submodule "pos_fel"]
+	path = pos_fel
+	url = git@github.com:rocketgithub/pos_fel.git
+	branch = 15.0
